<resources>
    <string name="app_name" translatable="false">JSierra_programationNativeMobile_TP2</string>
    <string name="École">École: Institut Grasset</string>
    <string name="Programme">Programme: Techniques de l\'informatique</string>
    <string name="Nom">Nom: Juan Pawlo Sierra Arias</string>
    <string name="Cours">Cours: Programmation native mobile (420-PN6-AG)</string>
    <string name="Date_de_remise">Date de remise: 4 Mai 2020</string>
</resources>
